--- a/02-hello-accessibility/projects/starter/app/src/main/AndroidManifest.xml
+++ b/02-hello-accessibility/projects/starter/app/src/main/AndroidManifest.xml
@@ -12,11 +12,9 @@
       android:theme="@style/AppTheme"
       tools:ignore="GoogleAppIndexingWarning">
     <activity
-        android:name=".onboarding.OnboardingActivity"
-        android:screenOrientation="portrait" />
+        android:name=".onboarding.OnboardingActivity" />
     <activity
         android:name=".MainActivity"
-        android:screenOrientation="portrait"
         android:theme="@style/SplashTheme">
       <intent-filter>
         <action android:name="android.intent.action.MAIN" />
